[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hixa-lang"
version = "0.1.0"
description = "A modern, production-ready programming language implemented in Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hixa Language Team", email = "team@hixa-lang.org"}
]
maintainers = [
    {name = "Hixa Language Team", email = "team@hixa-lang.org"}
]
keywords = ["programming-language", "compiler", "interpreter", "language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
hixa = "hixa.cli:main"

[project.urls]
Homepage = "https://github.com/hixa-lang/hixa"
Documentation = "https://hixa-lang.readthedocs.io"
Repository = "https://github.com/hixa-lang/hixa"
"Bug Tracker" = "https://github.com/hixa-lang/hixa/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=hixa --cov-report=term-missing --cov-report=html" 